fix featured title letter spacing

--- a/themes/nabshow-ny-2022/app/scss/modules/_sections.scss
+++ b/themes/nabshow-ny-2022/app/scss/modules/_sections.scss
@@ -876,7 +876,7 @@
   margin-bottom: rem(40);
   @include bp-768 {
     @include primary-black-54-57;
-    letter-spacing: rem(8.7);
+    letter-spacing: rem(7.5);
     margin-bottom: rem(76);
   }
 }
